[package]
name = "brd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
warp = { version = "0.4", features = ["server", "multipart"] }
maud = { git = "https://github.com/petally/maud.git", version = "0.27.0", features = ["warp"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
dotenvy = { version = "*" }
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.0"
futures-util = "0.3.31"
